force-app/main/default/objects/Contact/fields/MarketingBudget__c.field-meta.xml
<CustomField>
    <fullName>MarketingBudget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Marketing Budget</label>
    <type>Checkbox</type>
</CustomField>