force-app/main/default/objects/Contact/fields/SalesBudget__c.field-meta.xml
<CustomField>
    <fullName>SalesBudget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Sales Budget</label>
    <type>Checkbox</type>
</CustomField>